[gd_scene load_steps=9 format=4 uid="uid://b2uu7xkd4chcy"]

[ext_resource type="TileSet" uid="uid://dbtah512jouq3" path="res://assets/grass_tileset.tres" id="1_8ghm2"]
[ext_resource type="Script" path="res://scenes/tutorial/tutorial.gd" id="1_er6pw"]
[ext_resource type="PackedScene" uid="uid://bpsariuc5gr6k" path="res://entities/critters/bnnuy_tutorial/bnnuy_tutorial.tscn" id="2_3disj"]
[ext_resource type="PackedScene" uid="uid://j7407nvlgqbi" path="res://entities/lanius_tutorial/lanius_tutorial.tscn" id="2_b35er"]
[ext_resource type="AudioStream" uid="uid://ifi82d3cot84" path="res://music/bossa_lanius.ogg" id="3_tspjf"]
[ext_resource type="PackedScene" uid="uid://il0rnprlgux" path="res://scenes/game/shooting_manager.tscn" id="6_y8bip"]
[ext_resource type="PackedScene" uid="uid://j81avxh4ked" path="res://scenes/game/wrapping_manager.tscn" id="7_0iu6p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qsgj"]
size = Vector2(6, 6)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_er6pw")
tutorial_bunny = ExtResource("2_3disj")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAA5ACoAAgADAAAAAAA5ACkAAgAAAAAAAAA4ACoAAgABAAAAAAA4ACkAAgABAAAAAAA3ACoAAgADAAAAAAA3ACkAAgACAAAAAAA2ACoAAgABAAAAAAA2ACkAAgAAAAAAAAA1ACoAAgABAAAAAAA1ACkAAgAAAAAAAAA0ACoAAgABAAAAAAA0ACkAAgABAAAAAAAzACoAAgAAAAAAAAAzACkAAgAAAAAAAAAyACoAAgAAAAAAAAAyACkAAgACAAAAAAAxACoAAgADAAAAAAAxACkAAgACAAAAAAAwACoAAgABAAAAAAAwACkAAgADAAAAAAAvACoAAgADAAAAAAAvACkAAgADAAAAAAAuACoAAgABAAAAAAAuACkAAgADAAAAAAAtACoAAgAAAAAAAAAtACkAAgACAAAAAAAsACoAAgAAAAAAAAAsACkAAgACAAAAAAArACoAAgADAAAAAAArACkAAgABAAAAAAAqACoAAgACAAAAAAAqACkAAgABAAAAAAApACoAAgADAAAAAAApACkAAgADAAAAAAAoACoAAgABAAAAAAAoACkAAgAAAAAAAAAnACoAAgADAAAAAAAnACkAAgAAAAAAAAAmACoAAgABAAAAAAAmACkAAgADAAAAAAAlACoAAgADAAAAAAAlACkAAgACAAAAAAAkACoAAgAAAAAAAAAkACkAAgACAAAAAAAjACoAAgAAAAAAAAAjACkAAgADAAAAAAAiACoAAgAAAAAAAAAiACkAAgACAAAAAAAhACoAAgACAAAAAAAhACkAAgAAAAAAAAAgACoAAgABAAAAAAAgACkAAgADAAAAAAAfACoAAgACAAAAAAAfACkAAgADAAAAAAAeACoAAgAAAAAAAAAeACkAAgADAAAAAAAdACoAAgABAAAAAAAdACkAAgABAAAAAAAcACoAAgABAAAAAAAcACkAAgAAAAAAAAAbACoAAgACAAAAAAAbACkAAgADAAAAAAAaACoAAgADAAAAAAAaACkAAgADAAAAAAAZACoAAgABAAAAAAAZACkAAgABAAAAAAAYACoAAgABAAAAAAAYACkAAgAAAAAAAAAXACoAAgABAAAAAAAXACkAAgABAAAAAAAWACoAAgAAAAAAAAAWACkAAgACAAAAAAAVACoAAgADAAAAAAAVACkAAgABAAAAAAAUACoAAgABAAAAAAAUACkAAgADAAAAAAATACoAAgABAAAAAAATACkAAgACAAAAAAASACoAAgABAAAAAAASACkAAgACAAAAAAARACoAAgAAAAAAAAARACkAAgABAAAAAAAQACoAAgABAAAAAAAQACkAAgABAAAAAAAPACoAAgAAAAAAAAAPACkAAgABAAAAAAAOACoAAgADAAAAAAAOACkAAgACAAAAAAANACoAAgABAAAAAAANACkAAgAAAAAAAAAMACoAAgADAAAAAAAMACkAAgABAAAAAAALACoAAgABAAAAAAALACkAAgABAAAAAAAKACoAAgADAAAAAAAKACkAAgABAAAAAAAJACoAAgADAAAAAAAJACkAAgADAAAAAAAIACoAAgAAAAAAAAAIACkAAgABAAAAAAAHACoAAgADAAAAAAAHACkAAgAAAAAAAAAGACoAAgABAAAAAAAGACkAAgABAAAAAAAFACoAAgABAAAAAAAFACkAAgADAAAAAAAEACoAAgADAAAAAAAEACkAAgAAAAAAAAADACoAAgACAAAAAAADACkAAgAAAAAAAAACACoAAgADAAAAAAACACkAAgACAAAAAAABACoAAgACAAAAAAABACkAAgAAAAAAAAAAACoAAgABAAAAAAAAACkAAgADAAAAAAD//yoAAgABAAAAAAD//ykAAgADAAAAAAD+/yoAAgADAAAAAAD+/ykAAgABAAAAAAD9/yoAAgADAAAAAAD9/ykAAgAAAAAAAAD8/yoAAgACAAAAAAD8/ykAAgADAAAAAAD7/yoAAgADAAAAAAD7/ykAAgACAAAAAAD6/yoAAgAAAAAAAAD6/ykAAgACAAAAAAD5/yoAAgABAAAAAAD5/ykAAgACAAAAAAD4/yoAAgAAAAAAAAD4/ykAAgADAAAAAAD3/yoAAgABAAAAAAD3/ykAAgADAAAAAAD2/yoAAgACAAAAAAD2/ykAAgABAAAAAAD1/yoAAgABAAAAAAD1/ykAAgACAAAAAAD0/yoAAgAAAAAAAAD0/ykAAgAAAAAAAADz/yoAAgABAAAAAADz/ykAAgADAAAAAADy/yoAAgABAAAAAADy/ykAAgAAAAAAAADx/yoAAgADAAAAAADx/ykAAgADAAAAAADw/yoAAgADAAAAAADw/ykAAgAAAAAAAADv/yoAAgADAAAAAADv/ykAAgACAAAAAADu/yoAAgABAAAAAADu/ykAAgABAAAAAADt/yoAAgABAAAAAADt/ykAAgABAAAAAADs/yoAAgAAAAAAAADs/ykAAgAAAAAAAADr/yoAAgADAAAAAADr/ykAAgACAAAAAADq/yoAAgAAAAAAAADq/ykAAgADAAAAAADp/yoAAgADAAAAAADp/ykAAgADAAAAAADo/yoAAgADAAAAAADo/ykAAgAAAAAAAADn/yoAAgABAAAAAADn/ykAAgAAAAAAAADm/yoAAgAAAAAAAADm/ykAAgABAAAAAAATAA4AAgADAAAAAAATAA0AAgADAAAAAAATAAwAAgABAAAAAAATAAsAAgABAAAAAAATAAoAAgABAAAAAAATAAkAAgAAAAAAAAATAAgAAgACAAAAAAATAAcAAgABAAAAAAATAAYAAgACAAAAAAATAAUAAgAAAAAAAAATAAQAAgACAAAAAAATAAMAAgACAAAAAAATAAIAAgAAAAAAAAATAAEAAgABAAAAAAATAAAAAgADAAAAAAASAA4AAgAAAAAAAAASAA0AAgADAAAAAAASAAwAAgACAAAAAAASAAsAAgAAAAAAAAASAAoAAgADAAAAAAASAAkAAgACAAAAAAASAAgAAgAAAAAAAAASAAcAAgADAAAAAAASAAYAAgADAAAAAAASAAUAAgAAAAAAAAASAAQAAgADAAAAAAASAAMAAgABAAAAAAASAAIAAgABAAAAAAASAAEAAgACAAAAAAASAAAAAgAAAAAAAAARAA4AAgABAAAAAAARAA0AAgABAAAAAAARAAwAAgAAAAAAAAARAAsAAgACAAAAAAARAAoAAgACAAAAAAARAAkAAgADAAAAAAARAAgAAgABAAAAAAARAAcAAgADAAAAAAARAAYAAgADAAAAAAARAAUAAgAAAAAAAAARAAQAAgAAAAAAAAARAAMAAgACAAAAAAARAAIAAgAAAAAAAAARAAEAAgAAAAAAAAARAAAAAgADAAAAAAAQAA4AAgABAAAAAAAQAA0AAgABAAAAAAAQAAwAAgACAAAAAAAQAAsAAgABAAAAAAAQAAoAAgACAAAAAAAQAAkAAgABAAAAAAAQAAgAAgACAAAAAAAQAAcAAgADAAAAAAAQAAYAAgABAAAAAAAQAAUAAgADAAAAAAAQAAQAAgAAAAAAAAAQAAMAAgAAAAAAAAAQAAIAAgABAAAAAAAQAAEAAgACAAAAAAAQAAAAAgABAAAAAAAPAA4AAgAAAAAAAAAPAA0AAgACAAAAAAAPAAwAAgADAAAAAAAPAAsAAgABAAAAAAAPAAoAAgAAAAAAAAAPAAkAAgACAAAAAAAPAAgAAgABAAAAAAAPAAcAAgAAAAAAAAAPAAYAAgACAAAAAAAPAAUAAgACAAAAAAAPAAQAAgACAAAAAAAPAAMAAgACAAAAAAAPAAIAAgAAAAAAAAAPAAEAAgACAAAAAAAPAAAAAgACAAAAAAAOAA4AAgACAAAAAAAOAA0AAgAAAAAAAAAOAAwAAgADAAAAAAAOAAsAAgADAAAAAAAOAAoAAgAAAAAAAAAOAAkAAgAAAAAAAAAOAAgAAgADAAAAAAAOAAcAAgAAAAAAAAAOAAYAAgADAAAAAAAOAAUAAgABAAAAAAAOAAQAAgACAAAAAAAOAAMAAgABAAAAAAAOAAIAAgADAAAAAAAOAAEAAgABAAAAAAAOAAAAAgABAAAAAAANAA4AAgABAAAAAAANAA0AAgABAAAAAAANAAwAAgABAAAAAAANAAsAAgACAAAAAAANAAoAAgACAAAAAAANAAkAAgAAAAAAAAANAAgAAgADAAAAAAANAAcAAgACAAAAAAANAAYAAgACAAAAAAANAAUAAgAAAAAAAAANAAQAAgAAAAAAAAANAAMAAgAAAAAAAAANAAIAAgADAAAAAAANAAEAAgACAAAAAAANAAAAAgADAAAAAAAMAA4AAgABAAAAAAAMAA0AAgABAAAAAAAMAAwAAgABAAAAAAAMAAsAAgACAAAAAAAMAAoAAgABAAAAAAAMAAkAAgADAAAAAAAMAAgAAgABAAAAAAAMAAcAAgAAAAAAAAAMAAYAAgACAAAAAAAMAAUAAgADAAAAAAAMAAQAAgABAAAAAAAMAAMAAgABAAAAAAAMAAIAAgABAAAAAAAMAAEAAgADAAAAAAAMAAAAAgACAAAAAAALAA4AAgACAAAAAAALAA0AAgACAAAAAAALAAwAAgACAAAAAAALAAsAAgAAAAAAAAALAAoAAgABAAAAAAALAAkAAgABAAAAAAALAAgAAgAAAAAAAAALAAcAAgABAAAAAAALAAYAAgACAAAAAAALAAUAAgADAAAAAAALAAQAAgABAAAAAAALAAMAAgABAAAAAAALAAIAAgABAAAAAAALAAEAAgAAAAAAAAALAAAAAgAAAAAAAAAKAA4AAgADAAAAAAAKAA0AAgABAAAAAAAKAAwAAgAAAAAAAAAKAAsAAgADAAAAAAAKAAoAAgACAAAAAAAKAAkAAgACAAAAAAAKAAgAAgADAAAAAAAKAAcAAgADAAAAAAAKAAYAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAQAAgADAAAAAAAKAAMAAgAAAAAAAAAKAAIAAgACAAAAAAAKAAEAAgACAAAAAAAKAAAAAgAAAAAAAAAJAA4AAgAAAAAAAAAJAA0AAgAAAAAAAAAJAAwAAgADAAAAAAAJAAsAAgACAAAAAAAJAAoAAgADAAAAAAAJAAkAAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAcAAgABAAAAAAAJAAYAAgADAAAAAAAJAAUAAgADAAAAAAAJAAQAAgADAAAAAAAJAAMAAgABAAAAAAAJAAIAAgACAAAAAAAJAAEAAgACAAAAAAAJAAAAAgAAAAAAAAAIAA4AAgAAAAAAAAAIAA0AAgAAAAAAAAAIAAwAAgABAAAAAAAIAAsAAgADAAAAAAAIAAoAAgAAAAAAAAAIAAkAAgABAAAAAAAIAAgAAgADAAAAAAAIAAcAAgABAAAAAAAIAAYAAgAAAAAAAAAIAAUAAgABAAAAAAAIAAQAAgABAAAAAAAIAAMAAgACAAAAAAAIAAIAAgABAAAAAAAIAAEAAgAAAAAAAAAIAAAAAgACAAAAAAAHAA4AAgACAAAAAAAHAA0AAgACAAAAAAAHAAwAAgAAAAAAAAAHAAsAAgABAAAAAAAHAAoAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAgAAgABAAAAAAAHAAcAAgACAAAAAAAHAAYAAgADAAAAAAAHAAUAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAIAAgADAAAAAAAHAAEAAgABAAAAAAAHAAAAAgABAAAAAAAGAA4AAgABAAAAAAAGAA0AAgABAAAAAAAGAAwAAgADAAAAAAAGAAsAAgADAAAAAAAGAAoAAgAAAAAAAAAGAAkAAgADAAAAAAAGAAgAAgABAAAAAAAGAAcAAgAAAAAAAAAGAAYAAgACAAAAAAAGAAUAAgABAAAAAAAGAAQAAgACAAAAAAAGAAMAAgADAAAAAAAGAAIAAgACAAAAAAAGAAEAAgADAAAAAAAGAAAAAgABAAAAAAAFAA4AAgADAAAAAAAFAA0AAgACAAAAAAAFAAwAAgADAAAAAAAFAAsAAgACAAAAAAAFAAoAAgAAAAAAAAAFAAkAAgADAAAAAAAFAAgAAgAAAAAAAAAFAAcAAgABAAAAAAAFAAYAAgABAAAAAAAFAAUAAgADAAAAAAAFAAQAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAIAAgABAAAAAAAFAAEAAgAAAAAAAAAFAAAAAgADAAAAAAAEAA4AAgACAAAAAAAEAA0AAgACAAAAAAAEAAwAAgACAAAAAAAEAAsAAgADAAAAAAAEAAoAAgACAAAAAAAEAAkAAgABAAAAAAAEAAgAAgADAAAAAAAEAAcAAgADAAAAAAAEAAYAAgABAAAAAAAEAAUAAgABAAAAAAAEAAQAAgACAAAAAAAEAAMAAgADAAAAAAAEAAIAAgACAAAAAAAEAAEAAgACAAAAAAAEAAAAAgACAAAAAAADAA4AAgAAAAAAAAADAA0AAgAAAAAAAAADAAwAAgAAAAAAAAADAAsAAgABAAAAAAADAAoAAgACAAAAAAADAAkAAgADAAAAAAADAAgAAgABAAAAAAADAAcAAgADAAAAAAADAAYAAgABAAAAAAADAAUAAgABAAAAAAADAAQAAgADAAAAAAADAAMAAgACAAAAAAADAAIAAgADAAAAAAADAAEAAgAAAAAAAAADAAAAAgABAAAAAAACAA4AAgADAAAAAAACAA0AAgAAAAAAAAACAAwAAgAAAAAAAAACAAsAAgAAAAAAAAACAAoAAgAAAAAAAAACAAkAAgABAAAAAAACAAgAAgACAAAAAAACAAcAAgABAAAAAAACAAYAAgAAAAAAAAACAAUAAgADAAAAAAACAAQAAgAAAAAAAAACAAMAAgADAAAAAAACAAIAAgACAAAAAAACAAEAAgADAAAAAAACAAAAAgACAAAAAAABAA4AAgAAAAAAAAABAA0AAgADAAAAAAABAAwAAgABAAAAAAABAAsAAgAAAAAAAAABAAoAAgAAAAAAAAABAAkAAgADAAAAAAABAAgAAgABAAAAAAABAAcAAgACAAAAAAABAAYAAgACAAAAAAABAAUAAgABAAAAAAABAAQAAgABAAAAAAABAAMAAgADAAAAAAABAAIAAgABAAAAAAABAAEAAgADAAAAAAABAAAAAgACAAAAAAAAAA4AAgAAAAAAAAAAAA0AAgADAAAAAAAAAAwAAgAAAAAAAAAAAAsAAgACAAAAAAAAAAoAAgABAAAAAAAAAAkAAgACAAAAAAAAAAgAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAYAAgADAAAAAAAAAAUAAgADAAAAAAAAAAQAAgABAAAAAAAAAAMAAgADAAAAAAAAAAIAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAAAAgADAAAAAAA=")
tile_set = ExtResource("1_8ghm2")

[node name="LaniusTutorial" parent="." instance=ExtResource("2_b35er")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tspjf")
volume_db = -5.0

[node name="BunnySleepingArea" type="Area2D" parent="."]
position = Vector2(160, 112)
collision_layer = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BunnySleepingArea"]
shape = SubResource("RectangleShape2D_1qsgj")

[node name="TutorialBunnySpawn" type="Marker2D" parent="."]
position = Vector2(288, -24)

[node name="ShootingManager" parent="." instance=ExtResource("6_y8bip")]
enabled = false
allow_miss = false

[node name="WrappingManager" parent="." instance=ExtResource("7_0iu6p")]
enabled = false

[connection signal="enabled_shooting" from="LaniusTutorial" to="ShootingManager" method="set_enabled" binds= [true]]
[connection signal="enabled_wrapping" from="LaniusTutorial" to="WrappingManager" method="set_enabled" binds= [true]]
[connection signal="started_tutorial" from="LaniusTutorial" to="AudioStreamPlayer" method="play" binds= [0.0]]
[connection signal="triggered_bunny" from="LaniusTutorial" to="." method="spawn_tutorial_bunny"]
[connection signal="critter_wrapped" from="WrappingManager" to="LaniusTutorial" method="on_bunny_wrapped"]
